--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-themes": "0.0.15",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-icons": "^4.3.1",
     "react-rough-notation": "^1.0.1"
   },
   "devDependencies": {
