--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "@popperjs/core": "^2.11.5",
     "axios": "^0.21.1",
     "globby": "^3.0.0",
     "next": "10.x",
@@ -28,7 +29,7 @@
     "prettier": "^2.5.1",
     "react": "17.x",
     "react-dom": "17.x",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "react-rough-notation": "^1.0.1"
   },
   "devDependencies": {
