--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": "17.x",
     "react-dom": "17.x",
     "react-icons": "^4.4.0",
-    "react-rough-notation": "^1.0.1"
+    "react-responsive-carousel": "^3.2.23",
+    "react-rough-notation": "^1.0.1",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0-alpha.3",
