--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "author": {
     "name": "William",
-    "email": "williamong1400@gmail.com",
+    "email": "williamong.business@gmail.com",
     "url": "https://willz-home.vercel.app/"
   },
   "private": true,
